--- a/javascript/modificandohtml.html
+++ b/javascript/modificandohtml.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modificando Html</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-</body>
+    <body  class="exercicio">
+        <script>
+            const body = document.querySelector('body');//selecionando o body
+
+            const div1 = document.createElement('div');//criando o elemento div
+            div1.classList.add('destaque');//adicionando a classe destaque
+            div1.innerHTML = "primeiro div criado via JavaScript";//adicionando conteúdo
+
+            const div2 = document.createElement('div');//criando o segundo elemento div
+            div2.setAttribute('id', 'segundo');//adicionando o id
+            div2.innerHTML = "segundo div criado via JavaScript";//adicionando conteúdo  
+
+            const p = document.createElement('p'); //criando o elemento p
+            p.innerHTML = "parágrafo criado via JavaScript";//adicionando conteúdo
+            const div3 = document.createElement('div');//criando o terceiro elemento div
+            div3.appendChild(p);//adicionando o p dentro do div3
+
+            body.appendChild(div1);//adicionando o div1 dentro do body
+            body.appendChild(div2);//adicionando o div2 dentro do body
+            body.appendChild(div3);//adicionando o div3 dentro do body
+
+            const texto = document.createTextNode('Texto criado via JavaScript');//criando um nó de texto
+            div3.insertBefore(texto, div3.childNodes[0]);//adicionando o nó de texto antes do p dentro do div3
+
+            const div4 = div3.cloneNode(true);//clonando o div3
+            body.appendChild(div4);//adicionando o nó de texto dentro do div4
+            //body.removeChild(div3);//removendo o p do div3
+
+        </script>
+    </body>
 </html>
